--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: action/setup-java@v2
+      - uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
           java-version: '11'
