--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: checkout backend
+        uses: actions/checkout@v2
+      - name: checkout frontend
+        uses: actions/checkout@v2
+        with:
+          repository: temp-portfolio-team/frontend
+          path: ./frontend
       - uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
@@ -17,20 +24,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - name: checkout backend
-        uses: actions/checkout@v2
-      - name: deploy back-end to heroku
-        uses: akhileshns/heroku-deploy@v3.12.12 
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "sicksago"
-          heroku_email: "vel1024@naver.com"
-      - name: checkout frontend
-        uses: actions/checkout@v2
-        with:
-          repository: temp-portfolio-team/frontend
-          path: ./
-      - name: deploy front-end to heroku
+      - name: deploy two repo to heroku
         uses: akhileshns/heroku-deploy@v3.12.12 
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
