--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '11'
-      - name: deploy two repo to heroku
+      - name: deploy repo to heroku
         uses: akhileshns/heroku-deploy@v3.12.12 
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
