--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+//    implementation 'org.springframework.boot:spring-boot-configuration-processor'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2',
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
             'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
     implementation 'com.querydsl:querydsl-jpa'
