--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -25,7 +25,7 @@ spring:
 
 jwt:
   token:
-    secret-key: secret
+    secret-key: ${JWT_SECRET_KEY}
   access-token:
     expire-length: 1800000
   refresh-token:
