--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,21 @@
 spring:
-  profiles:
-    include: oauth
+  output:
+    ansi:
+      enabled: always
   datasource:
-    url: ${{secrets.POSTGRES_DATABASE}}
-    username: ${{secrets.POSTGRES_USERNAME}}
-    password: ${{secrets.POSTGRES_PASSWORD}}
+    url: jdbc:postgresql://localhost:5432/mate
+    username: postgres
+    password: postgres
     hikari:
       maximum-pool-size: 4
   jpa:
     hibernate:
       ddl-auto: create
+    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-        use_sql_comments: true
+
+logging.level:
+  org.hibernate.SQL: debug
