--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       maximum-pool-size: 4
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 #    show-sql: true
     properties:
       hibernate:
