--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,29 +1,20 @@
 spring:
   profiles:
     include: oauth
-  output:
-    ansi:
-      enabled: always
   datasource:
-    url: jdbc:postgresql://localhost:5432/mate
-    username: postgres
-    password: postgres
+    url: ${DATABASE_URL}
+    username: ${POSTGRES_USERNAME}
+    password: ${POSTGRES_PASSWORD}
     hikari:
       maximum-pool-size: 4
   jpa:
     hibernate:
-      ddl-auto: create
-#    show-sql: true
+      ddl-auto: validate
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
+        use_sql_comments: true
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-
-logging.level:
-  org.hibernate.SQL: debug
-
-file:
-  dir: /Users/gimdohun/Desktop/myProject/uploadFile/
