--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,6 @@ out/
 .vscode/
 
 /src/main/generated
-application-redis.yml
+application-redis-dev.yml
 application-oauth-dev.yml
 application-dev.yml
