--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,4 +20,4 @@ spring:
       matching-strategy: ant_path_matcher
 
 file:
-  dir: /Users/gimdohun/Desktop/myProject/uploadFile/
+  dir: ${FILE_DIR}
