[Add] 채팅 기능 관련 설정 WebSocket + STOMP + Redis

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,6 @@ out/
 
 ### VS Code ###
 .vscode/
-
 /src/main/generated
-application-redis-dev.yml
-application-oauth-dev.yml
-application-dev.yml
+application-oauth-local.yml
+application-local.yml
