--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   profiles:
-    include: oauth
+    active: local  #배포 서버에서는 삭제
+    include: oauth-local #배포 서버 oauth 로 변경
   datasource:
     url: ${DATABASE_URL}
     username: ${POSTGRES_USERNAME}
