--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   profiles:
-    include: oauth, aws
+    active: local
+    include: oauth-local, aws-local
   datasource:
     url: ${DATABASE_URL}
     username: ${POSTGRES_USERNAME}
