--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
   profiles:
-    active: local
-    include: oauth-local, aws-local
+#    active: local
+#    include: oauth-local, aws-local
+    include: oauth, aws
   datasource:
     url: ${DATABASE_URL}
     username: ${POSTGRES_USERNAME}
